<resources>
    <string name="app_name">moviesApp</string>
    <string name="_13"><b> 13+ </b></string>
    <string name="storyline"><b> Storyline </b></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="storyline_text">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="avengers_end_game"><b>Avengers:\nEnd Game</b></string>
    <string name="action_adventure_drama">Action, Adventure, Drama</string>
    <string name="_137_min">137 MIN</string>
    <string name="actor_name">Actor Name</string>
    <string name="cast">Cast</string>
</resources>