<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#191926"
    android:contentDescription="fuckoff">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/avengers_top"
            android:layout_width="match_parent"
            android:layout_height="318dp"
            android:background="@drawable/orig"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/mask_top"
            android:layout_width="match_parent"
            android:layout_height="318dp"
            android:background="@drawable/mask"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="222dp"
            android:background="@drawable/rectangle"
            android:fontFamily="@font/roboto_black"
            android:text="@string/_13"
            android:textColor="@color/white"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/roboto_black"
            android:text="@string/avengers_end_game"
            android:textColor="@color/white"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/age" />

        <ImageView
            android:id="@+id/tag"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/tag"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name" />

        <ImageView
            android:id="@+id/reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/reviews_avengers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tag" />

        <TextView

            android:id="@+id/storyline_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto_black"
            android:gravity="start"
            android:text="@string/storyline"
            android:textColor="#ECECEC"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reviews" />

        <TextView
            android:id="@+id/storyline_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:lineSpacingExtra="4sp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:textColor="@color/grey"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/storyline_name" />

        <TextView
            android:id="@+id/cast"
            android:layout_width="243dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:gravity="start"
            android:text="@string/cast"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/storyline_text"
            app:layout_goneMarginStart="16dp" />

        <TextView
            android:id="@+id/cast_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:gravity="start"
            android:text="@string/cast"
            android:textColor="@color/grey"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cast"
            app:layout_goneMarginStart="16dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>